--- a/sass/block/_footer.sass
+++ b/sass/block/_footer.sass
@@ -72,6 +72,10 @@
   &__text
     color: $footer-text-color
     margin-bottom: 22px
+    font-style: normal
+    font-weight: normal
+    font-size: 14px
+    line-height: 160%
   &__link
     text-decoration: none
     color: inherit
@@ -84,6 +88,11 @@
     height: 50px
     margin-bottom: 15px
     outline: none
+    font-style: normal
+    font-weight: normal
+    font-size: 12px
+    line-height: 15px
+    color: $footer-text-color
   &__message
     height: 123px
     background-color: #fff
@@ -93,6 +102,11 @@
     flex-basis: 100%
     margin-bottom: 22px
     outline: none
+    font-style: normal
+    font-weight: normal
+    font-size: 12px
+    line-height: 15px
+    color: $footer-text-color
   &__send
     width: 100%
     align-items: center
