--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -23,8 +23,7 @@
 @media (max-width: 992px)
   .container, .newsletter-wrapper
     max-width: 93%
-  body
-    padding-top: 78px 
+  .navbar
     &-top
       padding: 30px 0
     &__search
@@ -91,10 +90,15 @@
 @media ( max-width: 768px )
   .container
     max-width: 93%
+  body
+    padding-top: 78px 
   .navbar
     &-top
       padding-top: 28px
       padding-bottom: 28px
+      &__menu
+        &-button
+          outline: none
     &__mobile
       &_fixed
         position: fixed
@@ -121,8 +125,6 @@
       flex-direction: column
       &__item
         margin-bottom: 20px
-        &_p3
-          padding-bottom: 30px
         &_mobile
           &_visible
             display: block
@@ -231,6 +233,11 @@
       flex-basis: 100%
     &__legal
       margin-left: 0
+    &__title--inline
+      margin-bottom: 20px
+    &__social
+      &-network
+        flex-wrap: wrap
   .modal
     &__dialog
       &--visible
@@ -297,7 +304,7 @@
         &--visible
           margin: auto
           margin-bottom: 30px
-          width: 80%
+          width: 72%
     &-bottom
       top: 67px
     &__logo
