--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -18,12 +18,22 @@ img
   border: none
   padding: 0 23px
   height: 50px
+  font-style: normal
+  font-weight: normal
+  font-size: 12px
+  line-height: 15px
+  color: $footer-text-color
 .message
   background-color: #fff
+  color: $footer-text-color
   border-radius: 4px
   padding: 18px 23px
   border: none
   margin-bottom: 15px
+  font-style: normal
+  font-weight: normal
+  font-size: 12px
+  line-height: 15px
 .button
   font-style: normal
   font-weight: bold
