--- a/sass/block/_footer.sass
+++ b/sass/block/_footer.sass
@@ -67,6 +67,8 @@
       font-weight: normal
       font-size: 12px
       line-height: 15px
+      color: $light
+      cursor: pointer
   &__image
     min-width: 40px
   &__text
@@ -92,7 +94,6 @@
     font-weight: normal
     font-size: 12px
     line-height: 15px
-    color: $footer-text-color
   &__message
     height: 123px
     background-color: #fff
@@ -106,7 +107,6 @@
     font-weight: normal
     font-size: 12px
     line-height: 15px
-    color: $footer-text-color
   &__send
     width: 100%
     align-items: center
