--- a/sass/block/_newsletter.sass
+++ b/sass/block/_newsletter.sass
@@ -37,13 +37,13 @@
     &__input
       padding-right: 110px
       padding-left: 33px
-      min-height: 55px
+      height: 55px
       font-weight: 300
       font-size: 14px
       line-height: 18px
-      color: #BDBDBD
       width: 350px
       outline: none
+      border: none
     &__button
       position: absolute
       top: 0
