--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -12,6 +12,13 @@ img
 
 .booking
   font-family: 'Nunito', sans-serif
+input::placeholder,
+textarea::placeholder
+  font-style: normal
+  font-weight: bold
+  font-size: 12px
+  color: #BDBDBD
+
 .input
   background-color: #fff
   border-radius: 4px
@@ -22,10 +29,9 @@ img
   font-weight: normal
   font-size: 12px
   line-height: 15px
-  color: $footer-text-color
+  outline: none
 .message
   background-color: #fff
-  color: $footer-text-color
   border-radius: 4px
   padding: 18px 23px
   border: none
@@ -42,7 +48,6 @@ img
   min-width: 160px
   min-height: 50px
   padding: 18px
-  color: $light
   background-color: $primary
   border: none
   outline: none
