--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@ textarea::placeholder {
   outline: none;
   border-radius: 4px;
   cursor: pointer;
+  color: #FFFFFF;
 }
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
