--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -19,7 +19,8 @@
       margin-right: 20px
   .footer
     &__input
-      flex-basis: 100%
+      &-group
+        flex-basis: 100%
 @media (max-width: 992px)
   .container, .newsletter-wrapper
     max-width: 93%
@@ -79,7 +80,8 @@
         grid-row: 4
         margin-bottom: 63px
     &__input
-      flex-basis: 49%
+      &-group
+        flex-basis: 49%
     &__conditions
       margin: 0
       grid-row: 5
@@ -230,7 +232,8 @@
       margin-bottom: 20px
   .footer
     &__input
-      flex-basis: 100%
+      &-group
+        flex-basis: 100%
     &__legal
       margin-left: 0
     &__title--inline
