--- a/sass/block/_modal.sass
+++ b/sass/block/_modal.sass
@@ -39,7 +39,7 @@
     cursor: pointer
   &__input
     width: 100%
-    margin-bottom: 15px
+    margin-top: 15px
     outline: none
   &__message
     width: 100%
@@ -47,6 +47,9 @@
     cols: 30
     rows: 4
     outline: none
+    margin-top: 15px
+  &__button
+    margin-top: 15px
   &__info
     font-weight: bold
     font-style: normal
