--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -18,6 +18,10 @@ textarea::placeholder
   font-weight: bold
   font-size: 12px
   color: #BDBDBD
+.invalid
+  margin-bottom: 2px
+  color: $primary
+  border-bottom: 1px solid $primary
 
 .input
   background-color: #fff
