--- a/sass/block/_footer.sass
+++ b/sass/block/_footer.sass
@@ -82,18 +82,11 @@
     text-decoration: none
     color: inherit
   &__input
-    flex-basis: 48%
-    background-color: #fff
-    border-radius: 4px
-    border: none
-    padding: 0 23px
-    height: 50px
-    margin-bottom: 15px
-    outline: none
-    font-style: normal
-    font-weight: normal
-    font-size: 12px
-    line-height: 15px
+    width: 100%
+    &-group
+      flex-basis: 48%  
+      margin-bottom: 15px
+      outline: none
   &__message
     height: 123px
     background-color: #fff
