--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -19,6 +19,8 @@
       margin-right: 20px
   .footer
     &__input
+      &-container
+        flex-wrap: wrap
       &-group
         flex-basis: 100%
 @media (max-width: 992px)
