--- a/sass/block/_footer.sass
+++ b/sass/block/_footer.sass
@@ -83,6 +83,10 @@
     color: inherit
   &__input
     width: 100%
+    &-container
+      display: flex
+      justify-content: space-between
+      width: 100%
     &-group
       flex-basis: 48%  
       margin-bottom: 15px
