--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -143,6 +143,9 @@
       &__visible
         display: block
         overflow: auto
+  .newsletter
+    &-title
+      margin-bottom: 0
   .user
     &__name
       &--light
@@ -327,6 +330,10 @@
       height: 179px
   .map
     height: 173px
+  .newsletter
+    &-subscribe
+      &__input
+        max-width: 270px
   .footer
     &__image
       margin-right: 12px
