--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -96,6 +96,10 @@
     max-width: 93%
   body
     padding-top: 78px 
+  .invalid
+    font-weight: normal
+    font-size: 12px
+    line-height: 20px
   .navbar
     &-top
       padding-top: 28px
@@ -158,7 +162,7 @@
       display: flex
       justify-content: space-between
       flex-direction: column
-      widows: 16px
+      width: 16px
       height: 11px
       border: none
       background-color: $light
