--- a/css/style.css
+++ b/css/style.css
@@ -1250,6 +1250,10 @@ template {
 }
 
 .packages-item {
+  -ms-grid-row: 50;
+  grid-row: 50%;
+  -ms-grid-column: 50;
+  grid-column: 50%;
   background-color: #0A223D;
   color: #FFFFFF;
   padding-left: 21px;
@@ -1260,11 +1264,26 @@ template {
   margin-bottom: 5px;
 }
 
+.packages-img {
+  -ms-grid-column: 50;
+  grid-column: 50%;
+  -ms-grid-row: 50;
+  grid-row: 50%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  -o-object-fit: cover;
+     object-fit: cover;
+  overflow: hidden;
+}
+
 .packages-wrapper {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -1274,30 +1293,38 @@ template {
   max-width: 299px;
 }
 
-.packages__card {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 350px;
-  height: 500px;
-  border-radius: 4px;
-  overflow: hidden;
-  grid-column-gap: 30px;
-  grid-row-gap: 30px;
-}
-
 .packages-card {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 730px;
-  height: 500px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -ms-grid-column: 1;
-      grid-column-start: 1;
-  grid-column-end: 3;
+  grid-column: 1;
   border-radius: 4px;
   overflow: hidden;
-  grid-column-gap: 0;
+  grid-row-gap: 20px;
+  border-radius: 4px;
+}
+
+.packages-card__button {
+  background-color: #EC1F46;
+  border: none;
+  outline: none;
+}
+
+.packages-card__big {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  border-radius: 4px;
+  overflow: hidden;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1/3;
 }
 
 .packages-card__title {
@@ -1306,6 +1333,7 @@ template {
   font-weight: bold;
   font-size: 18px;
   line-height: 23px;
+  margin-top: 0;
 }
 
 .footer {
