--- a/sass/block/_packages.sass
+++ b/sass/block/_packages.sass
@@ -1,41 +1,53 @@
 .packages
   padding: 40px 0 70px 0
   &-item
+    grid-row: 50%
+    grid-column: 50%
     background-color: $dark
     color: $light
     padding-left: 21px
   &-rating
     margin-bottom: 46px
     margin-bottom: 5px
-  
+  &-img
+    grid-column: 50%
+    grid-row: 50%
+    width: 100%
+    margin: 0
+    padding: 0
+    object-fit: cover
+    overflow: hidden
   &-wrapper
     display: grid
     grid-template-columns: repeat(3, 1fr)
+    grid-column-gap: 30px
+    grid-row-gap: 30px
     justify-content: space-between
   &-text
     max-width: 299px
-  &__card
-    
-    display: flex
-    width: 350px
-    height: 500px
-    border-radius: 4px
-    overflow: hidden
-    grid-column-gap: 30px
-    grid-row-gap: 30px
+  
   &-card
     display: flex
-    flex-direction: 
-    width: 730px
-    height: 500px
-    grid-column-start: 1
-    grid-column-end: 3
+    flex-direction: column
+    grid-column: 1
     border-radius: 4px
     overflow: hidden
-    grid-column-gap: 0
+    grid-row-gap: 20px
+    border-radius: 4px
+    &__button
+      background-color: $primary
+      border: none
+      outline: none
+    &__big
+      flex-direction: row
+      border-radius: 4px
+      overflow: hidden
+      grid-column: 1/3
     &__title
       margin-bottom: 27px
       font-style: normal
       font-weight: bold
       font-size: 18px
       line-height: 23px
+      margin-top: 0
+ 
