--- a/css/style.css
+++ b/css/style.css
@@ -909,6 +909,14 @@ template {
   height: 213px;
   border-radius: 10px;
   overflow: hidden;
+  border: transparent;
+  outline: none;
+}
+
+iframe {
+  width: 347px;
+  height: 213px;
+  border: none;
 }
 
 .newsletter {
