--- a/sass/block/_hotel.sass
+++ b/sass/block/_hotel.sass
@@ -188,3 +188,11 @@
   height: 213px 
   border-radius: 10px
   overflow: hidden
+  border: transparent
+  outline: none
+iframe
+  width: 347px
+  height: 213px
+  border: none
+
+
