--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -23,6 +23,17 @@
         flex-wrap: wrap
       &-group
         flex-basis: 100%
+  .main-card
+    &-info
+      padding-top: 35px
+      &__title
+        margin-bottom: 15px
+      &__text
+        margin-bottom: 23px
+      &__item:nth-child(3n)
+        margin-bottom: 13px
+  .secondary-card
+    &-info
 @media (max-width: 992px)
   .container, .newsletter-wrapper
     max-width: 93%
@@ -90,7 +101,13 @@
       grid-column: span 6
   .modal
     &__button
-      margin-right: 10px   
+      margin-right: 10px  
+  .packages
+    &__title
+      font-size: 36px
+    &-wrapper
+      grid-template-columns: 1fr 1fr
+      grid-template-rows: repeat(6, min-content) 
 @media ( max-width: 768px )
   .container
     max-width: 93%
@@ -216,6 +233,10 @@
         &--next
           margin-left: 100px
   .newsletter
+    padding-top: 76px
+    padding-bottom: 83px
+    height: 320px
+    &-image
     &-wrapper
       flex-direction: column
       align-items: start
@@ -262,6 +283,25 @@
     &__button
       margin-top: 15px
       margin-bottom: 30px
+  .packages
+    &-price
+      &__new-price
+        font-size: 20px
+    &-wrapper
+      grid-template-rows: repeat(6, min-content)
+  .main-card
+    &-info
+      padding: 30px 20px 25px 35px
+      &__icon
+        margin-right: 7px
+  .secondary-card
+    &-info
+      padding: 25px 20px 25px 25px
+      &__icon
+        margin-right: 7px
+    &__title
+      font-size: 18px
+      margin-top: 35px
 @media ( max-width: 576px )
   .container
     max-width: 90%
@@ -313,7 +353,38 @@
     &__dialog
       padding: 20px 50px
       min-width: 90%
-
+  .packages
+    &-wrapper
+      grid-gap: 20px
+    &-price
+      grid-template-rows: repeat(2, min-content)
+      &__new-price
+        grid-column: 1
+        grid-row: 2
+        margin-bottom: 0
+      &__button
+        grid-column: 2
+        grid-row: 2
+  .main-card
+    grid-template-columns: repeat(2, 1fr)
+    grid-template-rows: repeat(2, 1fr)
+    &-info
+      padding: 25px 20px 20px 25px
+      grid-column: span 2
+      grid-row: 2
+    &__image
+      width: 100%
+      height: 100%
+      object-fit: cover
+      grid-column: span 2
+      grid-row: 1
+      border-radius: 4px 4px 0 0
+  .secondary-card
+    grid-column: span 2
+    &__image
+      object-fit: cover
+      width: 520px
+      height: 250px
 @media ( max-width: 480px )
   .container
     max-width: 90%
