--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -9,7 +9,10 @@ body
   margin: auto
 img
   max-width: 100%
-
+iframe
+  width: 100%
+  height: 100%
+  border: none
 .booking
   font-family: 'Nunito', sans-serif
 input::placeholder,
