--- a/sass/block/_packages.sass
+++ b/sass/block/_packages.sass
@@ -1,53 +1,161 @@
 .packages
-  padding: 40px 0 70px 0
-  &-item
-    grid-row: 50%
-    grid-column: 50%
-    background-color: $dark
-    color: $light
-    padding-left: 21px
-  &-rating
-    margin-bottom: 46px
-    margin-bottom: 5px
-  &-img
-    grid-column: 50%
-    grid-row: 50%
-    width: 100%
-    margin: 0
-    padding: 0
-    object-fit: cover
-    overflow: hidden
+  &__title
+    margin-top: 40px
+    margin-bottom: 65px
+    font-family: Muli
+    font-style: normal
+    font-weight: bold
+    font-size: 36px
+    line-height: 45px
+    text-align: center
+    text-transform: uppercase
   &-wrapper
     display: grid
-    grid-template-columns: repeat(3, 1fr)
-    grid-column-gap: 30px
-    grid-row-gap: 30px
-    justify-content: space-between
-  &-text
-    max-width: 299px
-  
-  &-card
-    display: flex
-    flex-direction: column
-    grid-column: 1
-    border-radius: 4px
-    overflow: hidden
-    grid-row-gap: 20px
-    border-radius: 4px
-    &__button
-      background-color: $primary
-      border: none
-      outline: none
-    &__big
-      flex-direction: row
-      border-radius: 4px
-      overflow: hidden
+    grid-template-columns: 1fr 1fr 1fr 
+    grid-template-rows: 1fr 1fr 1fr 1fr
+    grid-gap: 30px
+    margin-bottom: 70px
+  &-price
+    display: grid
+    grid-template-columns: 1fr 120px
+    grid-template-rows: repeat(2, min-content)
+    justify-content: space-betweend
+    &__old-price
+      display: flex
       grid-column: 1/3
+      text-decoration: line-through
+      font-style: normal
+      font-weight: normal
+      font-size: 14px
+      line-height: 18px
+      align-items: flex-end
+    &__new-price
+      margin-top: 5px
+      font-style: normal
+      font-weight: bold
+      font-size: 24px
+      line-height: 30px
+    &__button
+      grid-column: 2/3
+      height: 40px
+      font-family: Nunito
+      font-style: normal
+      font-weight: 600
+      font-size: 14px
+      line-height: 19px
+      color: $light
+      border: none
+      background-color: $primary
+      border-radius: 4px
+      cursor: pointer
+      outline: none
+.main-card
+  position: relative
+  display: grid
+  grid-template-columns: 1fr 1fr
+  grid-column: 1/3
+  grid-row: 1/3
+  border-radius: 10px
+  background-color: $dark
+  &__offer
+    position: absolute
+    background-color: $primary
+    padding: 8px 19px 7px 11px
+    border-radius: 0px 4px 4px 0px
+    top: 26px
+    left: 0
+    color: $light
+    font-style: normal
+    font-weight: 600
+    font-size: 12px
+    line-height: 15px
+  &-info
+    grid-column: 2/3
+    color: $light
+    padding: 46px 21px 30px 43px
     &__title
-      margin-bottom: 27px
+      margin: 5px 0 27px 0 
       font-style: normal
       font-weight: bold
       font-size: 18px
       line-height: 23px
-      margin-top: 0
- 
+    &__text
+      margin: 0 0 42px 0
+      font-family: Muli
+      font-style: normal
+      font-weight: normal
+      font-size: 14px
+      line-height: 160.6%
+    &__ul
+      margin: 0 
+      padding: 0
+      list-style-type: none
+    &__icon
+      margin-right: 14px
+    &__item
+      margin-bottom: 11px
+      font-family: Muli
+      font-style: normal
+      font-weight: normal
+      font-size: 12px
+      line-height: 15px
+    &__item:nth-child(3n)
+      margin-bottom: 28px
+  &__image
+    grid-column: 1/2
+    grid-row: 1/3
+    width: 100%
+    height: 100%
+    object-fit: cover
+    border-radius: 10px 0 0 10px
+.secondary-card
+  position: relative
+  display: grid
+  grid-row: span 2
+  grid-template-rows: 2
+  border-radius: 10px
+  background-color: $dark
+  &__offer
+    position: absolute
+    background-color: $primary
+    padding: 4px 9px
+    border-radius: 0px 4px 4px 0px
+    top: 26px
+    left: 0
+    color: $light
+    font-style: normal
+    font-weight: 600
+    font-size: 8px
+    line-height: 10px
+  &__image
+    display: grid
+    grid-row: span 1
+    object-fit: cover
+    border-radius: 10px 10px 0 0
+    height: 250px
+    width: 350px
+  &-info
+    padding: 30px 21px 25px 32px
+    color: $light
+    &__title
+      margin: 0 0 23px 0
+      font-style: normal
+      font-weight: bold
+      font-size: 18px
+      line-height: 23px
+    &__ul
+      margin: 0
+      padding: 0
+      list-style-type: none
+    &__item
+      font-family: Muli
+      margin-bottom: 11px
+      font-style: normal
+      font-weight: normal
+      font-size: 12px
+      line-height: 15px
+    &__item:nth-child(3n)
+      margin-bottom: 17px
+    &__icon
+      margin-right: 14px
+
