--- a/sass/block/_header.sass
+++ b/sass/block/_header.sass
@@ -30,6 +30,7 @@
       line-height: 18px
       text-decoration: none
       color: inherit
+      text-transform: uppercase
       
     &__logo
       width: 177px
@@ -42,6 +43,8 @@
   height: 40px
   overflow: hidden
   border-radius: 6px
+  border: none
+  outline: none
   &__input
     width: 350px
     height: 100%
